--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "@vercel/analytics": "^1.6.0",
     "firebase": "^12.6.0",
     "jspdf": "^3.0.4",
